<resources>
    <string name="app_name">Grace</string>
    <string name="status_expand">展开</string>
    <string name="status_collapse">收起</string>
    <string name="collapse_pack_up">收起</string>
    <string name="collapse_full_text">全文</string>
    <string name="skip">跳过</string>
    <string name="login">登录</string>
    <string name="user_name_hint">输入用户名</string>
    <string name="password_hint">输入密码</string>

    <string name="more_item_delete">删除</string>
    <string name="progress_text_format_pattern">t %d ps</string>
    <string name="viewpager_indicator">%1$d/%2$d</string>
    <string name="action_settings">Settings</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_item_login">登录</string>
    <string name="menu_item_loading">Loading</string>
    <string name="menu_item_progress_bar">ProgressBar</string>
    <string name="menu_item_webview">Web</string>
    <string name="item_others">其他</string>
    <string name="menu_item_about">关于</string>
    <string name="menu_item_exit">退出</string>
    <string name="cancel">取消</string>
    <string name="item_take_photo">相机获取</string>
    <string name="item_photo_album">相册获取</string>
    <string name="network_not_connected_tips">网络连接失败，请稍后再试</string>
</resources>
